--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "react-scripts": "^5.0.1",
     "react-youtube": "^10.1.0",
     "sass": "^1.70.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.0.7",
     "tether": "^1.4.7",
+    "ws": "^8.18.1",
     "youtube-audio-stream": "^0.3.61"
   },
   "scripts": {
