--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "homepage": "https://oxxo.ddns.net:3000",
   "proxy": "http://localhost:3000",
   "dependencies": {
-    "@distube/ytdl-core": "^4.16.5",
+    "@distube/ytdl-core": "^4.16.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^1.4.0",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
+    "axios": "^1.8.4",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "concurrently": "^8.2.0",
@@ -60,5 +62,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/node": "^22.14.1",
+    "ts-node": "^10.9.2"
   }
 }
