--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.14.1",
     "ts-node": "^10.9.2"
   }
