--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,12 +30,7 @@
     "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
-    "paths": {
-      "@_shared/*" : ["shared/*"],
-      "@_client/*" : ["clent/*"],
-      "@_components/*" : ["components/*"],
-      "@_pages/*" : ["pages/*"]
-    },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+    // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": ["@types"],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
